Fix modal footer height
For some modals this was causing the footer to be about 50% too large.
25px is the height of the submit button.

--- a/bzkanban.css
+++ b/bzkanban.css
@@ -232,8 +232,10 @@ body {
     padding: 15px;
     flex-direction: column;
     align-self: stretch;
-    min-height: 4vh;
     overflow-y: auto;
+}
+.modal-footer {
+    min-height: 25px;
 }
 .modal-body input,
 .modal-body select {
